--- a/dwyz.plist
+++ b/dwyz.plist
@@ -17,7 +17,7 @@
            <key>metadata</key>
            <dict>
                <key>bundle-identifier</key>
-               <string>com.rc.cbg</string>
+               <string>com.dwyz</string>
                <key>bundle-version</key>
                <string>1.0.0</string>
                <key>kind</key>
