--- a/dwyz.plist
+++ b/dwyz.plist
@@ -11,7 +11,7 @@
                    <key>kind</key>
                    <string>software-package</string>
                    <key>url</key>
-                   <string>http://192.168.0.34/dwyz.ipa</string>
+                   <string>http://download.duoweiyuzhou.com/dwyz.ipa</string>
                </dict>
            </array>
            <key>metadata</key>
